# flixora

./: .gitignore  KEEP_ALIVE.md  TODO.md  about.html  build-static.sh  category.html  config.js  contact.html  fallback-home.json  index.html  movie-views.json  movie.html  privacy.html  render.yaml  requirements.txt  script.js  server.py  styles.css  terms.html
moviebox-api/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
moviebox-api/.forgejo/workflows/: tests.yml
moviebox-api/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  pull_request_template.yml
moviebox-api/assets/: README.md
moviebox-api/assets/data/: avatar.page  extractors_benchmark.json  shannara-chronicles.page
moviebox-api/assets/recons/: README2.md  sw.js
moviebox-api/assets/recons/movies/: README.md  assign-cookies.json  cookies.json  download.json  everyones-searching.json  for-you.json  headers.json  home.json  hot-movies.json  search-suggestion.json  trending-without-uid.json  trending.json
moviebox-api/assets/recons/movies.0/: README.md  titanic-search.json
moviebox-api/assets/recons/nuxt.js/: README.md
moviebox-api/assets/recons/search/: all-results.json  movies-results.json  music-results.json  series-results.json  titanic-download-details.json  titanic-download-details1.json
moviebox-api/assets/recons/series/: README.0.md  README.md  merlin-info.json  merlin-search.json  specific_episode_download_details.json  specific_episode_stream_details.json
moviebox-api/assets/recons1/: COMBINED.md  NOTES.md  downloadable-media-details.json  item-details.json  search-results.json  search-suggestions.json
moviebox-api/assets/recons2/: downloadable-files-movie.json  downloadable-files-series.json  homepage.json  item-details-movie.json  item-details-series.json  item_details_movie.json  item_details_series.json  search_results.json  search_results_a_knight.json  search_results_banshee.json  season-info-movie.json  season-info-series.json
moviebox-api/docs/: index.md  installation.md  miscellaneous.md
moviebox-api/docs/blog/: .authors.yml  index.md
moviebox-api/docs/v1/: cli.md  introduction.md  movies.md  tv_series.md
moviebox-api/docs/v2/: cli.md  introduction.md  movies.md
moviebox-api/docs/v3/: cli.md  introduction.md
moviebox-api/src/moviebox_api/: __init__.py  __main__.py  console.py  utils.py
moviebox-api/tests/v1/: __init__.py
moviebox-api/tests/v2/: __init__.py
moviebox-api/tests/v3/: test_download.py
(+129 files in other folders)
