[project]
name = "moviebox-api"
version = "0.5.2.post1"
description = "Unofficial Python wrapper for Moviebox websites and Android app - download movies and tv series with their subtitles"
readme = "README.md"
license="Unlicense"
authors = [
    { name = "smartwa", email = "smartwacaleb@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: File Sharing",
]
dependencies = [
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "throttlebuster>=0.1.12",
]

[project.scripts]
moviebox-api = "moviebox_api.console:cli_entry"
moviebox = "moviebox_api.console:cli_entry"
moviebox-v1 = "moviebox_api.v1.cli.interface:main"
moviebox-v2 = "moviebox_api.v2.cli.interface:main"
moviebox-v3 = "moviebox_api.v3.cli.interface:main"

[project.urls]
homepage = "https://github.com/Simatwa/moviebox-api"
repository = "https://github.com/Simatwa/moviebox-api"
documentation = "https://github.com/Simatwa/moviebox-api"

[project.optional-dependencies]
cli = [
    "click>=8.2.1",
    "rich>=14.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moviebox_api"]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "coverage-badge>=1.1.2",
    "mkdocs-material>=9.7.6",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 82

[tool.ruff.lint]
select = [
    "E",      # https://docs.astral.sh/ruff/rules/#error-e
    "F",      # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]
ignore = [
    "UP031",  # https://docs.astral.sh/ruff/rules/printf-string-formatting/
    "F401"    # https://docs.astral.sh/ruff/rules/unused-import
]

[tool.ruff.lint.isort]
combine-as-imports = true
